--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 ---
+layout: default
 title: Pagina de inicio
 ---
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset=""utf-8">
-        <title>{{  page.title }}</title>
-    </head>
-    <body>
-            <h1>Bienvenidos a mi página de inicio</h1>
-    </body>
-</html>
+
+<h1>{{"Bienvenidos a mi Página de INICIO" | downcase}}</h1>
+dgiowejr89tweothqioeebn oie4ht8qehnfoiqww4hrr8oqh3wdf loqwwhrqwhw4f ilaawbniofqhw4oif njaweoiejw4of.
+weed gbqwu8e b auksdbciuaerht iksscklkoaseerbnionrgvvkldr
+ssejkdfbuiawew bfkjsdbfiuebfkjassnfklaeehnti 
